--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
     <ion-list>
         <div *ngFor="let post of redditService.posts">
             <ion-item (click)="playVideo($event, post)" no-lines style="background-color: #000;">
-                <img src="assets/images/loader.gif" *ngIf="post.data.snapshot"/>
+                <img src="assets/images/loader.gif" *ngIf="post.showLoader"/>
                 <video loop [src]="post.data.url" [poster]="post.data.snapshot">
                 </video>
             </ion-item>
